src/main/java/com/example/fashionforecastbackend/global/error/exception/InvalidTempConditionException.java
package com.example.fashionforecastbackend.global.error.exception;

import com.example.fashionforecastbackend.global.error.ErrorCode;
import com.example.fashionforecastbackend.global.error.GeneralException;

public class InvalidTempConditionException extends GeneralException {
	public InvalidTempConditionException(ErrorCode errorCode) {
		super(errorCode);
	}
}
